# MLOps-end2end

./: .gitignore  Dockerfile  README.md  config.py  pyproject.toml
day-1/: README.md
day-2/: requirements.txt
day-2/src/pipeline/components/: features.py
day_1/: README.md  hello_world_pipeline.py
day_1/components/: __init__.py  file_generator.py  file_updater.py  gather_metrics.py
day_2/: gcp_credential_setup.py  iris_pipeline.py  m5_pipeline.py  pipeline.py  test_sql.py
day_2/components/: __init__.py  config.py  evaluate.py  extract_secrets.py  features.py  mlflow_xgb.py  train.py
day_2/components/test_connection/: test_dbconnection.py
day_3/: iris_automl_pipeline.py  settings.yml  test.py
tests/: conftest.py
tests/day_1/: test_pipeline_compilable.py
tests/day_1/artifacts/: generated_artifact.txt  updated_artifact.txt
tests/day_1/components/: test_file_generator.py  test_file_updater.py  test_gather_metrics.py
tests/day_2/artifacts/: model.joblib  test_set.parquet  train_set.parquet
tests/day_2/components/: test_evaluate.py  test_features.py  test_train.py
