[tool.poetry]
name = "samsclub-datascienceservices-ailabs-mlops-summit"
authors = [
    "Matt Harris <matthew.w.harris@walmart.com>",
]
version = "0.0.1"
packages = [{include = "day_1"},{include = "day_2"}]
description = "MLOps Summit 2024 Modules"

[tool.poetry.dependencies]
python = ">=3.10,<3.12.0"
pandas = "^1.4.3"
scikit-learn = "1.5.1"
pyarrow = "11.0.0"
kfp = "2.9.0"
google-cloud-aiplatform = "1.73.0"
xgboost = "2.1.0"
pytest = "*"

# Feature Store
walmart-mlplatforms-wmfs = {version = "0.0.30", source = "element"}
google-cloud-secret-manager = "2.16.1"
dask = {version = "2024.2.1", extras = ["dataframe"]}
feast = "0.34.1"
google-cloud-bigtable = "2.27.0"
db-dtypes = "1.3.1"

# AI Labs AutoML Library
samsclub-datascienceservices-ailabs-kubeflow = {version = "0.0.16", source = "dss"}

[[tool.poetry.source]]
url = "https://pypi.ci.artifacts.walmart.com/artifactory/api/pypi/pythonhosted-pypi-release-remote/simple"
name = "walmart"
priority = "primary"

[[tool.poetry.source]]
name = "dss"
url = "https://pypi.ci.artifacts.walmart.com/artifactory/api/pypi/datascienceservices-pypi/simple"
priority = "explicit"

[[tool.poetry.source]]
name = "element"
url = "https://pypi.ci.artifacts.walmart.com/artifactory/api/pypi/mlplatforms-pypi/simple"
priority = "explicit"

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]

